Bug #40218 Setting backup_{history,progress}_log to DEFAULT turns them OFF
Submitted: 21 Oct 2008 21:29 Modified: 15 Nov 2008 2:34
Reporter: Paul DuBois
Status: Closed
Category:Server: Backup Severity:S3 (Non-critical)
Version:6.0 bzr OS:Any
Assigned to: Chuck Bell Target Version:6.0-rc
Triage: Triaged: D3 (Medium)

[21 Oct 2008 21:29] Paul DuBois
Description:
The default values of the backup_history_log and backup_progess_log system variables is
ON.

But explicitly setting them to DEFAULT turns them off.

How to repeat:
Test script:
SHOW VARIABLES LIKE 'backup%log';
SET GLOBAL backup_history_log=DEFAULT;
SET GLOBAL backup_progress_log=DEFAULT;
SHOW VARIABLES LIKE 'backup%log';

Result:
mysql> SHOW VARIABLES LIKE 'backup%log';
+---------------------+-------+
| Variable_name       | Value |
+---------------------+-------+
| backup_history_log  | ON    | 
| backup_progress_log | ON    | 
+---------------------+-------+
2 rows in set (0.01 sec)

mysql> SET GLOBAL backup_history_log=DEFAULT;
Query OK, 0 rows affected (0.00 sec)

mysql> SET GLOBAL backup_progress_log=DEFAULT;
Query OK, 0 rows affected (0.00 sec)

mysql> SHOW VARIABLES LIKE 'backup%log';
+---------------------+-------+
| Variable_name       | Value |
+---------------------+-------+
| backup_history_log  | OFF   | 
| backup_progress_log | OFF   | 
+---------------------+-------+
2 rows in set (0.00 sec)
[21 Oct 2008 22:02] Miguel Solorzano
Thank you for the bug report. Verified as described.
[4 Nov 2008 20:55] Chuck Bell
The problem is the code is shared with the slow and query log (intentionally) and the
default for these is OFF (deactivate), but the default for the backup logs is ON
(activate). Thus, modification is necessary to correct this behaviour.
[4 Nov 2008 21:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/57832

2727 Chuck Bell	2008-11-04
      BUG#40218 : Setting backup_{history,progress}_log to DEFAULT turns them OFF
      
      The problem is the code is shared with the slow and query log (intentionally) and
the
      default for these is OFF (deactivate), but the default for the backup logs is ON
      (activate). 
      
      This patch correctly sets the default for the backup logs.
[5 Nov 2008 13:44] Oystein Grovlen
Patch approved.
[10 Nov 2008 16:39] Jorgen Loland
Good to push
[14 Nov 2008 15:50] Bugs System
Pushed into 6.0.9-alpha  (revid:cbell@mysql.com-20081104195947-jdywb4dt02jc2oic) (version
source revid:jorgen.loland@sun.com-20081114134411-xypyf8wyjc2nm3ly) (pib:5)
[15 Nov 2008 2:34] Paul DuBois
Noted in 6.0.9 changelog.

The default value of the backup_history_log and backup_progess_log 
system variables is ON, but explicitly setting them to DEFAULT set
them to OFF.