BUG#40218 : Setting backup_{history,progress}_log to DEFAULT turns them OFF

The problem is the code is shared with the slow and query log (intentionally) and the
default for these is OFF (deactivate), but the default for the backup logs is ON
(activate). 

This patch correctly sets the default for the backup logs.